--- a/PI_DEV/app/Resources/views/base1.html.twig
+++ b/PI_DEV/app/Resources/views/base1.html.twig
@@ -370,7 +370,8 @@
                             <span>Claims Managmnt</span>
                         </a>
                         <ul class="treeview-menu">
-                            <li><a href="{{ path('claim_index') }}"><i class="fa fa-circle-o" aria-hidden="true"></i><span>Claims</span><div class="clearfix"></div></a></li>                            <li><a href={{ asset('pages/UI/icons.html') }}><i class="fa fa-circle-o"></i>Delete</a></li>
+                            <li><a href={{ asset('pages/UI/general.html') }}><i class="fa fa-circle-o"></i> View all </a></li>
+                            <li><a href={{ asset('pages/UI/icons.html') }}><i class="fa fa-circle-o"></i>Delete</a></li>
                             <li><a href={{ asset('pages/UI/buttons.html') }}><i class="fa fa-circle-o"></i>Add new </a></li>
                             <li><a href={{ asset('pages/UI/sliders.html') }}><i class="fa fa-circle-o"></i>Update</a></li>
                         </ul>
