--- a/PI_DEV/src/FixBundle/Resources/views/Frontend/index.html.twig
+++ b/PI_DEV/src/FixBundle/Resources/views/Frontend/index.html.twig
@@ -155,7 +155,11 @@
               </div><!-- row -->
           </div><!-- /.container -->
       </div><!-- tr-category -->
-  <section class="tr-fun-fact">
+
+      <!-- ==============================================
+      Fun Fact Section
+      =============================================== -->
+      <section class="tr-fun-fact">
           <div class="container">
               <div class="row text-center">
                   <div class="col-sm-4">
