--- a/PI_DEV/app/Resources/views/base.html.twig
+++ b/PI_DEV/app/Resources/views/base.html.twig
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+{% block stylesheat %}
+    <!DOCTYPE html>
 <html>
 <head>
 
@@ -26,19 +27,19 @@
     CSS
     =============================================== -->
     <!-- Style-->
-    <link type="text/css" href="{{ asset('css/style.css') }}" rel="stylesheet" />
+    <link type="text/css" href="{{ asset('css/style.css') }}" rel="stylesheet"/>
+    <link type="text/css" href="{{ asset('css/login.css') }}" rel="stylesheet"/>
 
+    <link href="{{ asset('/plugins/datatables/dataTables.bootstrap.css') }}" rel="stylesheet" type="text/css"/>
     <!-- ==============================================
     Feauture Detection
     =============================================== -->
     <script src="{{ asset('js/modernizr-custom.html') }}"></script>
+    <script src="{{ asset('js/modernizr.custom.js') }}"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
 
+    {% endblock %}
 </head>
 <body>
 {% block header %}
@@ -46,20 +47,26 @@
         <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#navbar-collapse">
+                    <button class="navbar-toggle collapsed" type="button" data-toggle="collapse"
+                            data-target="#navbar-collapse">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="{{ path ('frontend_homepage') }}"><img alt="Image" src="{{ asset('img/logo.jpg') }}">The Kafe</a>
+                    <a class="navbar-brand" href="{{ path ('frontend_homepage') }}"><img alt="Image"
+                                                                                         src="{{ asset('img/logo.jpg') }}">The
+                        Kafe</a>
+                    {% if app.user !=null %}
+
+                    {% endif %}
                 </div><!-- /.navbar-header -->
                 <div class="navbar-left">
                     <div class="collapse navbar-collapse" id="navbar-collapse">
                         <ul class="nav navbar-nav">
                             <li><a href="{{ path('template_Hire') }}">GoHire</a></li>
                             <li><a href="{{ path('template_Work') }}">GoWork</a></li>
-                            <li><a href="{{ path('template_Pricing') }}">Pricing</a></li>
+                            <li><a href="{{ path('article_index') }}">Blog</a></li>
                             <li><a href="{{ path('template_How') }}">How it works</a></li>
                         </ul>
                     </div>
@@ -67,11 +74,15 @@
                 <div class="navbar-right">
                     <ul class="nav navbar-nav">
                         <li><i class="fa fa-user"></i></li>
-                        <li><a href="{{ path('template_Login') }}">Sign In/ Register </a></li>
+                        <li><a href="{{ path('fos_user_security_login') }}">Sign In/ Register </a></li>
 
                         <li class="dropdown mega-avatar">
+
                             <a class="dropdown-toggle" aria-expanded="true" href="#" data-toggle="dropdown">
-                                <span class="avatar w-32"><img width="25" height="25" class="img-resonsive img-circle" alt="..." src="{{ asset('img/users/2.jpg')}}"></span>
+                                <span class="avatar w-32"><img width="25" height="25" class="img-resonsive img-circle"
+                                                               alt="..." src="{{ asset('img/users/2.jpg') }}">
+                                </span>
+
                                 <!-- hidden-xs hides the username on small devices so only the image appears. -->
                                 <span>
 			Alex Grantte
@@ -103,61 +114,65 @@
 
 
 {% block footer %}
-    <footer class="footerWhite">
+<footer class="footerWhite">
 
-        <!-- COPY RIGHT -->
-        <div class="clearfix copyRight">
-            <div class="container">
-                <div class="row">
+    <!-- COPY RIGHT -->
+    <div class="clearfix copyRight">
+        <div class="container">
+            <div class="row">
 
-                    <div class="col-xs-12">
-                        <div class="copyRightWrapper">
-                            <div class="row">
+                <div class="col-xs-12">
+                    <div class="copyRightWrapper">
+                        <div class="row">
 
-                                <div class="col-sm-5 col-sm-push-7 col-xs-12">
-                                    <ul class="list-inline socialLink">
-                                        <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                                    </ul>
-                                </div><!-- /col-sm-5 -->
+                            <div class="col-sm-5 col-sm-push-7 col-xs-12">
+                                <ul class="list-inline socialLink">
+                                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                                </ul>
+                            </div><!-- /col-sm-5 -->
 
-                                <div class="col-sm-7 col-sm-pull-5 col-xs-12">
-                                    <div class="copyRightText">
-                                        <p>Copyright © 2018. All Rights Reserved</p>
-                                    </div>
-                                </div><!-- /col-sm-7 -->
+                            <div class="col-sm-7 col-sm-pull-5 col-xs-12">
+                                <div class="copyRightText">
+                                    <p>Copyright © 2018. All Rights Reserved</p>
+                                </div>
+                            </div><!-- /col-sm-7 -->
 
-                            </div><!-- /row -->
-                        </div><!-- /copyRightWrapper -->
-                    </div><!-- /col-xs-2 -->
+                        </div><!-- /row -->
+                    </div><!-- /copyRightWrapper -->
+                </div><!-- /col-xs-2 -->
 
-                </div><!-- /row -->
-            </div><!-- /container -->
-        </div><!-- /copyRight -->
+            </div><!-- /row -->
+        </div><!-- /container -->
+    </div><!-- /copyRight -->
 
-    </footer>
-    <a id="scrollup">Scroll</a>
+</footer>
+<a id="scrollup">Scroll</a>
 
-
+</body>
+</html>
+{% endblock %}
+{% block javascripts %}
     <!-- ==============================================
-    Scripts
-    =============================================== -->
-    <script src="{{asset('js/jquery-2.2.4.min.js')}}"></script>
-  <script src="{{ asset('js/jquery-3.2.1.min.js') }}"></script>
-     <script src="{{ asset('js/bootstrap.min.js') }}"></script>
+        Scripts
+        =============================================== -->
+    <script src="{{ asset('js/jquery-3.2.1.min.js') }}"></script>
+    <script src="{{ asset('js/bootstrap.min.js') }}"></script>
     <script src="{{ asset('js/kafe.js') }}"></script>
-
-    <link rel="stylesheet" href="{{ asset('js/datetimepicker/jquery.datetimepicker.min.css')}}" />
-    <script type="text/javascript" src="{{ asset('js/datetimepicker/jquery.js')}}"></script>
-    <script type="text/javascript" src="{{ asset('js/datetimepicker/jquery.datetimepicker.full.js')}}"></script>
-
+    <!-- DATA TABES SCRIPT -->
+    <script src="{{ asset('/plugins/datatables/jquery.dataTables.min.js') }}"></script>
+    <script src="{{ asset('/plugins/datatables/dataTables.bootstrap.min.js') }}"></script>
+    <script>
+        $(function () {
+            $("#example1").dataTable();
+        });
+    </script>
 
 
 {% endblock %}
-{% block javascripts %}{% endblock %}
-</body>
 
-</html>
+
+
 
