--- a/PI_DEV/src/FixBundle/Resources/views/Frontend/Default/Login.html.twig
+++ b/PI_DEV/src/FixBundle/Resources/views/Frontend/Default/Login.html.twig
@@ -29,12 +29,6 @@
           =============================================== -->
           <script src="{{ asset('js/modernizr-custom.html') }}"></script>
 
-          <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-          <!--[if lt IE 9]>
-          <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-          <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-          <![endif]-->
-
       </head>
       <body>
       <header class="header-login top-page">
@@ -101,7 +95,7 @@
                                     <input type="hidden" name="token" value="<?php echo Token::generate(); ?>" />
                                     <input value="Login" class="kafe-btn kafe-btn-default full-width" type="submit">
                                     <div class="margin-space"></div>
-                                    <a href="{{ path('template_Register') }}" class="kafe-btn kafe-btn-danger full-width">Register</a>
+                                    <a href="{{ path('fos_user_registration_register') }}" class="kafe-btn kafe-btn-danger full-width">Register</a>
                                 </div><!-- /.form-actions -->
                                 <div class="form-head">
                                     <a href="#" class="more-link">Forgot Password?</a>
